--- a/wp-content/themes/workingnyc/src/scss/utilities/margins/_margins.scss
+++ b/wp-content/themes/workingnyc/src/scss/utilities/margins/_margins.scss
@@ -22,3 +22,45 @@
   padding-top: 40px;
   padding-bottom: 40px;
 }
+@media screen and (min-width:1112px) { 
+  .desktop-width-570 {
+    width: 570px;
+  }
+  .desktop-font-size-55{
+    font-size: 55px;
+  }
+  .desktop-font-size-20{
+    font-size: 20px;
+  }
+  .desktop-gap-x-72 {
+    column-gap: 72px;
+  }
+}
+@media screen and (min-width: 768px) and (max-width:1112px) {
+  .tablet-width-366 {
+    width: 366px;
+  }
+  .tablet-width-300 {
+    width: 300px;
+  }
+  .tablet-font-size-55{
+    font-size: 55px;
+  }
+  .tablet-font-size-20{
+    font-size: 20px;
+  }
+  .tablet-gap-x-56 {
+    column-gap: 56px;
+  }
+}
+@media screen and (max-width: 480px) {
+  .mobile-width-360 {
+    width: 360px;
+  }
+  .mobile-font-size-50{
+    font-size: 50px;
+  }
+  .mobile-font-size-18{
+    font-size: 18px;
+  }
+}
