--- a/wp-content/themes/workingnyc/views/objects/attribution.twig
+++ b/wp-content/themes/workingnyc/views/objects/attribution.twig
@@ -4,7 +4,7 @@
       <svg class="fill-text stroke-text text-brand" width="163" height="48" role="img">
         <title>Job Ready by Jobs N Y C</title>
 
-        <use href="#logo-jnyc-horizontal"></use>
+        <use href="#logo-jnyc-footer"></use>
       </svg>
     </a>
 
