--- a/wp-content/themes/workingnyc/src/scss/_imports.scss
+++ b/wp-content/themes/workingnyc/src/scss/_imports.scss
@@ -2,5 +2,6 @@
 @forward '@nycopportunity/standard/src/scss/imports';
 @forward 'utilities/background/background';
 @forward '@nycopportunity/pttrn-scripts/src/spinner/spinner';
+@forward 'utilities/margins/margins';
 
 @forward 'tokens';
