--- a/wp-content/themes/workingnyc/views/home.twig
+++ b/wp-content/themes/workingnyc/views/home.twig
@@ -2,11 +2,11 @@
 
 {% block content %}
 <div class="bg-scale-1">
-  <header class="o-banner justify-center bg-gradient-to-r from-[#E5F4FF] to-[#fefefe] {% if post.thumbnail %}bg-banner-min-height bg-shape-wnyc-header{% endif %} relative">
+  <header class="bg-gradient-to-r from-[#E5F4FF] to-[#fefefe] {% if post.thumbnail %}bg-shape-wnyc-header{% endif %} w-full">
 
       {% if post.thumbnail %}
-      <div class="desktop-gap-x-72 tablet-gap-x-56 tablet:py-5 tablet:px-7 desktop:px-26 desktop:py-6 tablet:grid grid-cols-2">
-        <div class="my-4 desktop:my-8 tablet-my-8 tablet-width-366 desktop-width-570">
+      <div class="desktop-gap-x-72 tablet-gap-x-56 desktop:w-9/12 tablet:w-10/12 tablet:grid grid-cols-[3fr_2fr] m-auto">
+        <div class="my-4 desktop:my-8 tablet-my-8 tablet-width-366 desktop-width-570 text-center">
       {% else %}
       <div class="tablet:py-5 tablet:px-7 desktop:px-26 desktop:py-6 layout-content">
         <div class="my-4 desktop:my-8 tablet-my-8 wrap tablet-width-366 desktop-width-570">
@@ -26,7 +26,8 @@
 
           {# Do not delete. Possible header utility values; #}
           {# class="h4 text-center tablet:text-start tablet:text-h3 font-primary text-alt" #}
-          {{ post.post_content|replace({"<!-- featured_image -->": featured_image}) }}
+          {# {{ post.post_content|replace({"<!-- featured_image -->": featured_image}) }} #}
+          <h1>{{ post.post_content }}</h1>
 
           <p class="text-center mt-3">
             <a class="inline-block text-center" href="#content">
