removed unused css classes

--- a/wp-content/themes/workingnyc/views/home.twig
+++ b/wp-content/themes/workingnyc/views/home.twig
@@ -8,7 +8,7 @@
       <div class="desktop-gap-x-72 tablet-gap-x-56 desktop:w-9/12 tablet:w-10/12 tablet:grid grid-cols-[3fr_2fr] tablet:px-0 px-2 mx-auto tablet:py-7 py-4 desktop:py-6">
         <div class="text-center">
       {% else %}
-      <div class="tablet:py-5 tablet:px-7 desktop:px-26 desktop:py-6 layout-content">
+      <div class="layout-content">
         <div class="wrap">
       {% endif %}
 
