--- a/wp-content/themes/workingnyc/views/objects/newsletter.twig
+++ b/wp-content/themes/workingnyc/views/objects/newsletter.twig
@@ -1,5 +1,5 @@
-<section class="o-newsletter py-6 relative z-10" data-js="newsletter">
-  <div class="mobile-py-33 tablet-py-25 desktop-py-21 desktop-mx-50 tablet-mx-14">
+<section class="o-newsletter flex justify-center py-6 relative z-10" data-js="newsletter">
+  <div class="mx-2 py-4 site-max-width tablet:py-3 desktop-mx-50 tablet-mx-14">
     <h4 class="o-newsletter__heading">{{ __('Newsletter', 'WNYC-Newsletter') }}</h4>
 
     <form action="{{ newsletter_link }}/#content" id="mc-embedded-subscribe-form" method="post" novalidate="true">
