--- a/wp-content/themes/workingnyc/views/components/questionnaire.twig
+++ b/wp-content/themes/workingnyc/views/components/questionnaire.twig
@@ -1,8 +1,8 @@
-<section class="wrap relative pt-utility-anchor" id="questionnaire">
-  <div class="page-max py-4 tablet:py-8 desktop:px-6">
+<section class="wrap relative" id="questionnaire">
+  <div class="page-max py-4 tablet:py-5 desktop:py-6">
 
     {% if this.thumbnail %}
-    <div class="py-2 tablet:py-8 desktop:px-6 tablet:grid grid-cols-2 gap-x-5 items-center">
+    <div class="tablet:grid grid-cols-2 gap-x-5 items-center">
       <div>
     {% else %}
     <div class="py-2 tablet:py-8 desktop:px-6 layout-content">
