--- a/wp-content/themes/workingnyc/views/guides/guide.twig
+++ b/wp-content/themes/workingnyc/views/guides/guide.twig
@@ -2,7 +2,7 @@
 {# @For    Post Type #}
 {# @Class  timber-posts/Guides.php #}
 <a href="{{ post.link }}" class="c-card__header-link">
-<article class="c-card c-card-transparent rounded desktop:p-4 tablet:p-3 p-3 mobile-width-344 mobile-height-200 desktop-width-400 desktop-height-214 tablet-width-240 tablet-height-258">
+<article class="c-card c-card-transparent rounded desktop:p-4 p-3 mobile-width-344 mobile-height-200 desktop-width-400 desktop-height-214 tablet-width-240 tablet-height-258">
   <header class="items-center">
     {% if post.icon == '' %}<span>{% endif %}
       {% if post.icon %}
