--- a/wp-content/themes/workingnyc/views/home.twig
+++ b/wp-content/themes/workingnyc/views/home.twig
@@ -69,7 +69,7 @@
 
       {# Announcements #}
       {% if announcements %}
-      <section class="pb-8 pt-utility-anchor" id="announcements">
+      <section class="pb-8" id="announcements">
         <div class="layout-content py-2 tablet:py-8">
           <div class="wrap">
             <h2 class="h3 text-alt mt-0">{{ __('Announcements', 'WNYC') }}</h2>
