--- a/wp-content/themes/workingnyc/views/home.twig
+++ b/wp-content/themes/workingnyc/views/home.twig
@@ -48,7 +48,7 @@
       </div>
   </header>
 
-  <main id="content" class="bg-shape-wnyc-content mx-4 desktop:mx-7 tablet:mx-14">
+  <main id="content" class="bg-shape-wnyc-content mx-2 tablet:mx-7 desktop-mx-26">
     <div>
       {# Collections #}
       {% if collections %}
