--- a/wp-content/themes/workingnyc/views/components/collection.twig
+++ b/wp-content/themes/workingnyc/views/components/collection.twig
@@ -16,7 +16,7 @@
       {% endif %}
 
       {% if this.posts %}
-      <div class="pb-2 desktop:pb-5 desktop:px-6">
+      <div>
         {% if this.guides %}
         <div class="grid gap-x-2 gap-y-6 tablet:grid tablet:grid-cols-2 desktop:grid-cols-3">
         {% else %}
