--- a/wp-content/themes/workingnyc/views/guides/guide.twig
+++ b/wp-content/themes/workingnyc/views/guides/guide.twig
@@ -15,11 +15,11 @@
   </header>
 
   <div class="pt-3">
-        <span class="h6 desktop:h5 mb-2">
+        <h5>
             {{ post.title }}
-        </span>
+        </h5>
 
-    <div class="c-card__summary">
+    <div>
       {{ post.preview|wpautop }}
     </div>
 
