--- a/wp-content/themes/workingnyc/views/components/collection.twig
+++ b/wp-content/themes/workingnyc/views/components/collection.twig
@@ -18,7 +18,7 @@
       {% if this.posts %}
       <div>
         {% if this.guides %}
-        <div class="grid gap-x-2 gap-y-6 tablet:grid tablet:grid-cols-2 desktop:grid-cols-3">
+        <div class="grid tablet:grid-cols-3">
         {% else %}
         <div class="scroll scroll-x scroll-x-snap-start scroll-peek tablet:scroll-reset tablet:grid tablet:grid-cols-2 tablet:gap-3 desktop:gap-5 py-2 tablet:px-3 desktop:px-6">
         {% endif %}
