reset fill color

--- a/wp-content/themes/workingnyc/src/scss/_imports.scss
+++ b/wp-content/themes/workingnyc/src/scss/_imports.scss
@@ -3,6 +3,7 @@
 @forward 'utilities/background/background';
 @forward 'utilities/margins/margins';
 @forward 'utilities/sizes/sizes';
+@forward 'utilities/colors/colors';
 @forward '@nycopportunity/pttrn-scripts/src/spinner/spinner';
 
 @forward 'tokens';
