--- a/wp-content/themes/workingnyc/src/scss/utilities/margins/_margins.scss
+++ b/wp-content/themes/workingnyc/src/scss/utilities/margins/_margins.scss
@@ -22,6 +22,13 @@
   padding-top: 40px;
   padding-bottom: 40px;
 }
+.bgcolor-white {
+  background-color: #FFFFFF;
+}
+.center-align {
+  align-items: center;
+  display: flex;
+}
 @media screen and (min-width:1112px) { 
   .desktop-width-570 {
     width: 570px;
@@ -37,6 +44,13 @@
   }
   .desktop-gap-x-72 {
     column-gap: 72px;
+  }
+  .desktop-px-12 {
+    padding-left: 12px;
+    padding-right: 12px;
+  }
+  .desktop-nav-border{
+    border-top: 4px solid #2D3282;
   }
 }
 @media screen and (min-width: 768px) and (max-width:1112px) {
@@ -55,6 +69,9 @@
   .tablet-gap-x-56 {
     column-gap: 56px;
   }
+  .desktop-nav-border{
+    border-top: 4px solid #2D3282;
+  }
 }
 @media screen and (max-width: 480px) {
   .mobile-width-360 {
@@ -65,5 +82,11 @@
   }
   .mobile-font-size-18{
     font-size: 18px;
+  }
+  .desktop-nav-border{
+    border-top: 4px solid #2D3282;
+  }
+  .mobile-font-size-13 {
+    font-size: 13px;
   }
 }
