--- a/wp-content/themes/workingnyc/views/objects/navigation.twig
+++ b/wp-content/themes/workingnyc/views/objects/navigation.twig
@@ -5,11 +5,11 @@
     </svg>
   </a>
     <span class="hidden tablet:block desktop:block desktop:pl-1 o-navigation__home center-align float-left desktop-font-size-13">Official website of the City of New York</span>
-  <button class="o-navigation__menu-item desktop:mr-24" aria-controls="aria-c-text-controller" aria-expanded="false" data-dialog="open" data-dialog-lock="true" data-js="dialog">
+  <button class="float-right" aria-controls="aria-c-text-controller" aria-expanded="false" data-dialog="open" data-dialog-lock="true" data-js="dialog">
     <svg class="o-navigation__menu-icon icon-ui">
       <use href="#nyco-languages"></use>
     </svg>
-    <span class="o-navigation__menu-label">{{ __('Translate', 'WNYC') }}</span>
+    <span class="">{{ __('Language | English', 'WNYC') }}</span>
   </button>
 </nav>
 <nav aria-label="{{ header_menu.name }}" class="desktop:hidden desktop-nav-border px-2 tablet:px-5 desktop:px-3 desktop:pb-3 o-navigation" data-js="navigation">
